src/test/ui/suggestions/issue-57672.stderr
error: `extern crate` is not idiomatic in the new edition
  --> $DIR/issue-57672.rs:7:1
   |
LL | extern crate foo as foo_renamed;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert it to a `use`
   |
note: lint level defined here
  --> $DIR/issue-57672.rs:5:9
   |
LL | #![deny(unused_extern_crates)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

